# HPMCM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_documentation.yml  linting.yml  smoke-test.yml  testing-and-coverage.yml
docs/: Makefile  conf.py  demos.rst  index.rst
docs/api/: hpmcm.cell.rst  hpmcm.classify.rst  hpmcm.cluster.rst  hpmcm.footprint.rst  hpmcm.input_tables.rst  hpmcm.match.rst  hpmcm.match_utils.rst  hpmcm.object.rst  hpmcm.output_tables.rst  hpmcm.package_utils.rst  hpmcm.rst  hpmcm.shear_data.rst  hpmcm.shear_match.rst  hpmcm.shear_utils.rst  hpmcm.table.rst  hpmcm.utils.rst  hpmcm.viz_utils.rst  hpmcm.wcs_match.rst
docs/source/: cli.rst  contributing.rst  installation.rst  overview.rst
examples/: CellBased.ipynb  CompareCatTypes.ipynb  CompareSN.ipynb  CompareSkyCoverage.ipynb  CompareToObjectTable.ipynb  MatchEffic.ipynb  Meta.ipynb  ShearData.ipynb  ShearMatchEffic.ipynb
nb/: CellBased.ipynb  CleanData.ipynb  CleanObject.ipynb  CompareCatTypes.ipynb  CompareSN.ipynb  CompareSkyCoverage.ipynb  CompareToObjectTable.ipynb  MatchEffic.ipynb  Meta.ipynb  Sandbox.ipynb  ShearCalib.ipynb  ShearData.ipynb  ShearMatchEffic.ipynb  Untitled.ipynb
src/hpmcm/: __init__.py  catalogs.py  cell.py  classify.py  cluster.py  footprint.py  input_tables.py  match.py  match_utils.py  object.py  output_tables.py  package_utils.py  shear_data.py  shear_match.py  shear_utils.py  table.py  utils.py  viz_utils.py  wcs_match.py
src/hpmcm/cli/: commands.py  options.py
src/hpmcm/html_templates/: plot_group_index.html
test/: conftest.py  test_cli.py  test_cli.py.save  test_match.py  test_shear_match.py  test_wcs_match.py
tests/: conftest.py  test_cli.py  test_shear_match.py  test_wcs_match.py
